--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ python = "^3.8"
 django = "^4.1.3"
 django-environ = "^0.9.0"
 mysqlclient = "^2.1.1"
+celery = "^5.2.7"
+redis = "^4.3.4"
 
 [tool.poetry.dev-dependencies]
 
