--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-environ = "^0.9.0"
 mysqlclient = "^2.1.1"
 celery = "^5.2.7"
 redis = "^4.3.4"
+httpx = "^0.23.0"
 
 [tool.poetry.dev-dependencies]
 
