--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ mysqlclient = "^2.1.1"
 celery = "^5.2.7"
 redis = "^4.3.4"
 httpx = "^0.23.0"
+scrapy = "^2.7.1"
+selenium = "^4.6.0"
+scrapy-selenium = "^0.0.7"
 
 [tool.poetry.dev-dependencies]
 
