--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,11 @@ httpx = "^0.23.0"
 scrapy = "^2.7.1"
 selenium = "^4.6.0"
 scrapy-selenium = "^0.0.7"
+baidu-aip = "^4.16.8"
+chardet = "^5.0.0"
+pillow = "^9.3.0"
+opencv-python = "^4.6.0"
+numpy = "^1.23.4"
 
 [tool.poetry.dev-dependencies]
 
