--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ chardet = "^5.0.0"
 pillow = "^9.3.0"
 opencv-python = "^4.6.0"
 numpy = "^1.23.4"
+djangorestframework = "^3.14.0"
 
 [tool.poetry.dev-dependencies]
 
