--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pillow = "^9.3.0"
 opencv-python = "^4.6.0"
 numpy = "^1.23.4"
 djangorestframework = "^3.14.0"
+django-cid = "^2.3"
 
 [tool.poetry.dev-dependencies]
 
