--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ opencv-python = "^4.6.0"
 numpy = "^1.23.4"
 djangorestframework = "^3.14.0"
 django-cid = "^2.3"
+pandas = "^1.5.2"
+pymysql = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 
