--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ djangorestframework = "^3.14.0"
 django-cid = "^2.3"
 pandas = "^1.5.2"
 pymysql = "^1.0.2"
+django-filter = "^22.1"
 
 [tool.poetry.dev-dependencies]
 
