--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pandas = "^1.5.2"
 pymysql = "^1.0.2"
 django-filter = "^22.1"
 sentry-sdk = "^1.11.1"
+djongo = "^1.3.6"
 
 [tool.poetry.dev-dependencies]
 
