--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ pymysql = "^1.0.2"
 django-filter = "^22.1"
 sentry-sdk = "^1.11.1"
 djongo = "^1.3.6"
+pymongo = "^4.3.3"
+aioredis = "^2.0.1"
+django-elasticsearch-dsl = "^7.3"
 
 [tool.poetry.dev-dependencies]
 
