--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ djongo = "^1.3.6"
 pymongo = "^4.3.3"
 aioredis = "^2.0.1"
 django-elasticsearch-dsl = "^7.3"
+openai = "^0.26.5"
 
 [tool.poetry.dev-dependencies]
 
