--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ openai = "^0.26.5"
 uwsgi = "^2.0.21"
 gevent = "^22.10.2"
 flower = "^1.2.0"
+ipython = "^8.11.0"
 
 [tool.poetry.dev-dependencies]
 
