--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ uwsgi = "^2.0.21"
 gevent = "^22.10.2"
 flower = "^1.2.0"
 ipython = "^8.11.0"
+pre-commit = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 
