pre-commit black

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
     hooks:
     -   id: flake8
         args: [--max-line-length=131, "--ignore=F401,E265,E402, E122,F403,E225"]
+  # 自动格式化代码
   - repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
